add client styles

--- a/client/src/Pages/SquadPlayer/SquadPlayer.css
+++ b/client/src/Pages/SquadPlayer/SquadPlayer.css
@@ -11,7 +11,7 @@ h2{
 }
 
 .squad-players-card{
-    background-color: rgb(25,14,67) !important;
+    background-color: #190e43 !important;
     color: #fff !important;
 }
 
